--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>hello world</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ea nemo natus, consequuntur repellat at quidem perferendis ullam possimus eligendi quae! Omnis beatae eaque ipsum corrupti voluptatem molestiae itaque dolor!</p>
+    <li>satu</li>
+    <li>dua</li>
+
 </body>
 </html>
